dropshot/tests/fail/bad_endpoint7.stderr
error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
  --> tests/fail/bad_endpoint7.rs:24:13
   |
24 | ) -> Result<HttpResponseOk<Ret>, HttpError> {
   |             ^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`
   |
   = help: the following other types implement trait `serde::ser::Serialize`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `Ret` to implement `dropshot::handler::HttpResponseContent`
note: required by a bound in `HttpResponseOk`
  --> src/handler.rs
   |
   | pub struct HttpResponseOk<T: HttpResponseContent + Send + Sync + 'static>(
   |                              ^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpResponseOk`
